src/objects/SWx_Upsell_Items__c.object
<CustomObject>
    <fields>
        <fullName>Delivery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Completed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>