src/objects/SWx_Upsell_Items__c/fields/Bundle_ID__c.field-meta.xml
<CustomField>
    <fullName>Bundle_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundle ID</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SWx Items</relationshipLabel>
    <relationshipName>SWx_Items</relationshipName>
    <type>Lookup</type>
</CustomField>