src/objects/SWx_Upsell_Items__c/fields/Is_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Is_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rejected</label>
    <type>Checkbox</type>
</CustomField>