src/objects/SWx_Upsell_Items__c/fields/Product_Code_Account__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Account__c</fullName>
    <description>Product Code + Sold to Party, unique identifier for entitlements</description>
    <formula>CASESAFEID(SWx_Upsell_Proposal__r.Sold_To_Party__c ) + &apos;-&apos; + CASESAFEID(Sales_Item_Code__c)</formula>
    <label>Product Code Account</label>
    <type>Text</type>
</CustomField>