src/objects/SWx_Upsell_Items__c/recordTypes/SWX_Upsell_Items_Readonly.recordType-meta.xml
<RecordType>
    <fullName>SWX_Upsell_Items_Readonly</fullName>
    <active>true</active>
    <description>To make swx item readonly based on DP status</description>
    <label>SWX Upsell Items Readonly</label>
</RecordType>