src/objects/SWx_Upsell_Items__c/listViews/Created_Yesterday.listView-meta.xml
<ListView>
    <fullName>Created_Yesterday</fullName>
    <columns>OBJECT_ID</columns>
    <columns>SWx_Upsell_Proposal__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Created Yesterday</label>
</ListView>