src/objects/SWx_Upsell_Items__c/listViews/CSWx_UPS_000637.listView-meta.xml
<ListView>
    <fullName>CSWx_UPS_000637</fullName>
    <columns>OBJECT_ID</columns>
    <columns>SWx_Upsell_Proposal__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SWx_Upsell_Proposal__c</field>
        <operation>contains</operation>
        <value>CSWx.UPS.000651</value>
    </filters>
    <label>CSWx.UPS.000651</label>
</ListView>