src/objects/SWx_Upsell_Items__c/listViews/Failed_SWx_Upsell_Item.listView-meta.xml
<ListView>
    <fullName>Failed_SWx_Upsell_Item</fullName>
    <columns>NAME</columns>
    <columns>Error_Message__c</columns>
    <columns>Sales_Item_Code_SWx__c</columns>
    <columns>Feature_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ready_to_Convert__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Failed SWx Upsell Item</label>
    <language>en_US</language>
</ListView>